# dfoptimizer

./: .gitignore  .wakatime-project  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
dfoptimizer/: __init__.py  optimizer.py  types.py
dfoptimizer/knobs/: dlio.py
dfoptimizer/planner/: cooldown.py  planner.py
dfoptimizer/runtime/: __init__.py  context.py  knob.py  tunable.py  window.py
dfoptimizer/streaming/: mofka_io.py  zmq_io.py
tests/: test_planner.py
tests/data/: findings.jsonl
